--- a/style.css
+++ b/style.css
@@ -1,38 +1,65 @@
 /*http://pierre-giraud.com/html-css/exercices-html-css/creation-menu-simple-html-css.php*/
+/* http://fr.learnlayout.com/position.html 7/19 pour les position relatives et absolue et fixe*/
+/*font-family: 'Open Sans Condensed', sans-serif;*/
+
+.logo
+{
+	padding-left: 40px;
+	float: left;
+	width: 158px;
+	height:58px;
+
+}
 
 body
 {
-	font-family: serif;
+	font-weight: 900;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 1.2em;
+	letter-spacing: 0.2em;
 	margin: 0px;
-	padding: 0px;
+	padding-top: 20px;
 }
 
 nav
 {
+	width: 1000px;
+ 	margin: 0 auto; 
+}
+
+header
+{
 	width: 100%;
 }
 
-nav ul
+header
 {
 	margin: 0px;
 	padding: 0px;
 	overflow: hidden;
+	display: flex;
+    
 }
 
-nav a
+
+header a
 {
-	display: inline-block;
 	text-decoration: none;
-	padding: 20px 30px;
+	vertical-align: bottom;
+	padding-left: /*50px*/ 50px;
+	margin-top: 100px;
 	color: #003A49;
 
 }
 
 nav li
 {
+
+	display: inline-block;
 	list-style-type: none;
-	float: right;
-	display: reverse-order;
+	flex-direction: reverse;
+	/*float: right;*/
+	
 }
 
 body
@@ -42,6 +69,8 @@ body
 
 a:hover
 {
-	border-bottom: 5px solid #F15839;
-	color: #F15839;
+
+	text-decoration: underline;
+	/*text-underline-position: over 10px;*/
+	color: #F14928;
 }
