--- a/style.css
+++ b/style.css
@@ -1,20 +1,11 @@
 /*http://pierre-giraud.com/html-css/exercices-html-css/creation-menu-simple-html-css.php*/
 /* http://fr.learnlayout.com/position.html 7/19 pour les position relatives et absolue et fixe*/
 /*font-family: 'Open Sans Condensed', sans-serif;*/
-
-img [title="logo"]
-{
-	float: left;
-	width: 100%
-	max-height: auto;
-	display: flex;
-	flex-wrap: nowrap;
-}
-
 header
 {
-	font-weight: 900;
-	font-family: 'Open Sans Condensed', sans-serif;
+	/*font-family: 'Open Sans Condensed', sans-serif;*/
+	font-weight: medium;
+	font-family: 'Roboto', sans-serif;
 	font-size: 1em;
 	letter-spacing: 0.25em;
 	/*margin: 0px;*/
@@ -25,6 +16,16 @@ header
 	flex-wrap: nowrap;
 	justify-content: space-around;
 
+}
+
+img [title="logo"]
+{
+	float: left;
+	width: 100%
+	max-height: auto;
+	height: 100%;
+	display: flex;
+	flex-wrap: nowrap;
 }
 
 nav
@@ -75,7 +76,8 @@ a:hover
 #icones
 {
 	float: right;
-	display: inline-block;
+	display: flex;
+	flex-wrap: nowrap;
 
 }
 
@@ -92,3 +94,73 @@ a:hover
 	overflow: hidden;
 	width: 100%;
 }
+
+#middle
+{
+	display: flex;
+	justify-content: space-around;
+	width:100%
+	height: 175px;
+	padding-top: 65px;
+
+}
+
+#img_left #img_middle #img_right
+{
+	height: 175px;
+}
+
+#img_left
+{
+	-webkit-align-items: center;
+          align-items: center;
+  -webkit-justify-content: center;
+          justify-content: center;
+	width: 330px;
+	max-height: 175px;
+	height: 175px;
+	background-image: url(http://lokahiboards.com/fr/wp-content/uploads/sites/10/2015/08/img-race.jpg);
+}
+
+#img_left:hover
+{
+
+}
+
+#img_middle
+{
+	-webkit-align-items: center;
+          align-items: center;
+  -webkit-justify-content: center;
+          justify-content: center;
+	width: 330px;
+	max-height: 175px;
+	height: 175px;
+	background-image: url(http://lokahiboards.com/fr/wp-content/uploads/sites/10/2015/08/img-wave1.jpg);
+}
+
+#img_right
+{
+	-webkit-align-items: center;
+          align-items: center;
+  -webkit-justify-content: center;
+          justify-content: center;
+	width: 330px;
+	max-height: 175px;
+	height: 175px;
+	background-image: url(http://lokahiboards.com/fr/wp-content/uploads/sites/10/2015/08/img-discover.jpg);
+}
+
+p
+{
+	font-weight: bolder;
+	font-family: 'Roboto', sans-serif;
+	color: #003A49;
+	text-align: center;
+
+}
+
+/*.ico_middle
+{
+	justify-content: center;
+}*/
