--- a/style.css
+++ b/style.css
@@ -4,61 +4,80 @@
 header
 {
 	/*font-family: 'Open Sans Condensed', sans-serif;*/
-	font-weight: medium;
+	font-weight: bolder;
 	font-family: 'Roboto', sans-serif;
 	font-size: 1em;
 	letter-spacing: 0.25em;
 	/*margin: 0px;*/
 	width: 100%;
 	/*padding: 10px;*/
-	overflow: hidden;
+	/*overflow: hidden;*/
 	display: flex;
 	flex-wrap: nowrap;
-	justify-content: space-around;
+	
+	margin-top:20px;
+	margin-bottom:20px;
+	margin-right:60px;
+	margin-left:60px;
+	
+
 
 }
 
 img [title="logo"]
 {
 	float: left;
-	width: 100%
-	max-height: auto;
+	width: 100%;
+	max-height: 60px;
 	height: 100%;
 	display: flex;
 	flex-wrap: nowrap;
 }
 
+#menu_principal
+{
+	/*width: 100%;*/
+}
+
 nav
 {
-	width: 1000px;
- 	margin: 0 auto; 
+	/*display: inline-flex;
+	align-content: bottom;*/
+	width: 100%;
+	/*display: flex;
+	justify-content: space-around;
+    align-items: bottom;
+ 	margin: 0 auto; */
 }
 
 header a
 {
 	text-decoration: none;
-	/*vertical-align: bottom;*/
-	padding-bottom: 0px;
-	margin-bottom: 0px;
+	/*vertical-align: bottom;
+	padding-bottom: 00px;
+	margin-bottom: 0px;*/
 	color: #003A49;
-
 }
 
 nav ul
 {
-	justify-content: space-around;
 	display: flex;
+	justify-content: space-around;
 	flex-wrap: nowrap;
+	/*padding-left: 10px;*/
 }
 
 nav li
 {
 
-	display: inline-block;
-	list-style-type: none;
-	flex-direction: reverse;
-	/*float: right;*/
+	/*position: relative;
+	top: 20px;
+	left:200px;
+	align-items: center;*/
 	
+	list-style-type: none;
+	/*flex-direction: reverse;*/
+	/*float: right;*/	
 }
 
 body
@@ -66,26 +85,32 @@ body
 	color:#003A49;
 }
 
-a:hover
+.menu_principal a:hover
 {
-	border-bottom: solid #F14928 2px;
+	border-bottom: solid #F14928 1px;
+	padding-bottom: 5px;
 	/*text-decoration: underline;*/
 	color: #F14928;
 }
 
 #icones
 {
+	
 	float: right;
 	display: flex;
 	flex-wrap: nowrap;
-
+	padding-right: 100px;
 }
+
 
 .icones
 {
-	border-left: 5px solid #003A4;
-	width: 29px;
-	height: 24px;
+
+	border-right: 1px solid #003A49;
+	margin-left: 5px;
+	padding-right: 7px;
+	width: 20px;
+	height: 20px;
 }
 
 .slider
@@ -99,15 +124,15 @@ a:hover
 {
 	display: flex;
 	justify-content: space-around;
-	width:100%
+	width:100%;
 	height: 175px;
 	padding-top: 65px;
-
 }
 
 #img_left #img_middle #img_right
 {
 	height: 175px;
+
 }
 
 #img_left
@@ -122,10 +147,14 @@ a:hover
 	background-image: url(http://lokahiboards.com/fr/wp-content/uploads/sites/10/2015/08/img-race.jpg);
 }
 
-#img_left:hover
+/*#img_left:hover
 {
-
-}
+	background-color: white;
+	margin-left: 40px;
+	margin-top: 20px;
+	height:140px; 
+	width:275px;
+}*/
 
 #img_middle
 {
@@ -139,28 +168,49 @@ a:hover
 	background-image: url(http://lokahiboards.com/fr/wp-content/uploads/sites/10/2015/08/img-wave1.jpg);
 }
 
+/*#img_middle:hover
+{
+	opacity: 0;
+	background-color: white;
+	    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: 40px;
+	margin-top: 20px;
+	height:140px; 
+	width:275px;
+}*/
+
 #img_right
 {
 	-webkit-align-items: center;
           align-items: center;
-  -webkit-justify-content: center;
-          justify-content: center;
+  /*-webkit-justify-content: center;
+          justify-content: center;*/
 	width: 330px;
 	max-height: 175px;
 	height: 175px;
 	background-image: url(http://lokahiboards.com/fr/wp-content/uploads/sites/10/2015/08/img-discover.jpg);
 }
 
-p
+/*#img_right:hover
 {
-	font-weight: bolder;
-	font-family: 'Roboto', sans-serif;
-	color: #003A49;
-	text-align: center;
-
+	background-color: white;
+	margin-left: 40px;
+	margin-top: 20px;
+	height:140px; 
+	width:275px;
+}
+*/
+.ico_middle
+{
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 70px; 
 }
 
-/*.ico_middle
+span
 {
-	justify-content: center;
-}*/
+
+}
