--- a/style.css
+++ b/style.css
@@ -102,16 +102,18 @@ ul
 {
 	display: flex;/* met en ligne les block*/
 	flex-wrap: nowrap;
-	width: 100%;
-	justify-content: space-around;
+	width: 1280px;
+	
 	font-weight: bold;
 	font-family: 'Roboto', sans-serif;
 	font-size: 1em;
 	letter-spacing: 0.25em;
 	font-size: 0.8em;
-	margin-top: 20px;
+	margin: auto;
+	/*margin-top: 20px;
 	margin-right: 40px;
 	margin-bottom: 20px;
+	margin-left: 40px;*/
 
 }
 
@@ -119,15 +121,13 @@ ul
 {
 	display: flex;/* met en ligne les block*/
 	flex-wrap: nowrap;
-	width: 1000px;
+	width: 100%;
 	justify-content: space-around;
 }
 
 ul
 {
-	align-items: center;
 	display: flex;
-	justify-content: space-around;
 }
 
 /*
@@ -140,19 +140,25 @@ li
 
 img [title="logo"]
 {
-	max-height: 60px;
-	max-width: 160px;
+	height: 60px;
+	width: 160px;
 }
 
-nav li
+#menu li
 {
-	list-style-type: none;	
+	list-style-type: none;
+	margin-right: 45px;
 }
 
 #header a
 {
 	text-decoration: none;
 	color: #003A49;
+}
+
+#icones li
+{
+	list-style-type: none;
 }
 
 #menu a:hover
@@ -162,10 +168,13 @@ nav li
 	color: #F14928;
 }
 
+#icones ul
+{
+	float: right;
+}
 
 .icones
 {
-
 	border-right: 1px solid #003A49;
 	margin-left: 5px;
 	padding-right: 7px;
@@ -198,9 +207,9 @@ nav li
 #img_left
 {
 	-webkit-align-items: center;
-          align-items: center;
-  -webkit-justify-content: center;
-          justify-content: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	justify-content: center;
 	width: 330px;
 	max-height: 175px;
 	height: 175px;
