--- a/style.css
+++ b/style.css
@@ -103,12 +103,11 @@ ul
 	display: flex;/* met en ligne les block*/
 	flex-wrap: nowrap;
 	width: 1280px;
-	
-	font-weight: bold;
+	font-weight: medium;
 	font-family: 'Roboto', sans-serif;
 	font-size: 1em;
 	letter-spacing: 0.25em;
-	font-size: 0.8em;
+	/*font-size: 0.8em;*/
 	margin: auto;
 	/*margin-top: 20px;
 	margin-right: 40px;
@@ -138,16 +137,25 @@ li
 }*/
 
 
-img [title="logo"]
+.logo
 {
-	height: 60px;
-	width: 160px;
+	padding-top: 10px;
+	max-height: 60px;
+	max-width: 160px;
+	width: 100%;
+
 }
 
 #menu li
 {
 	list-style-type: none;
 	margin-right: 45px;
+}
+
+#menu
+{
+	margin-top: 40px;
+	padding-left: 20px;
 }
 
 #header a
@@ -159,6 +167,11 @@ img [title="logo"]
 #icones li
 {
 	list-style-type: none;
+}
+
+#icones
+{
+	margin-top: 40px;
 }
 
 #menu a:hover
