--- a/style.css
+++ b/style.css
@@ -1,23 +1,57 @@
 /*http://pierre-giraud.com/html-css/exercices-html-css/creation-menu-simple-html-css.php*/
 /* http://fr.learnlayout.com/position.html 7/19 pour les position relatives et absolue et fixe*/
 
-
-#header
+/*---------------------------header--------------------------------*/
+header
 {
 	display: flex;/* met en ligne les block*/
-	flex-wrap: nowrap;
-	width:65em; /*1380px;*/
+	justify-content: space-between;
+	width:1100px;
 	font-family: 'Roboto-Medium', sans-serif;
 	font-size: 18px;
 	letter-spacing: 120;
-	margin: auto;
 	margin-left: auto!important;
 	margin-right: auto!important;
+	margin-bottom: 30px;
+	list-style-type: none;
+	text-decoration: none;
+	color: #003A49;
+	align-items: baseline;
 }
 
+header a
+{
+	text-decoration: none;
+	color: #003A49;
+}
+
+#menu_de_navigation a
+{
+	margin-right: 30px;
+}
+
+#menu_de_navigation a:hover
+{
+	border-bottom: solid #F14928 1px;
+	padding-bottom: 5px;
+	color: #F14928;
+}
+
+
+#logo
+{
+	float: left;
+}
+
+#icones
+{
+	float: right;
+}
+
+/*
 #menus
 {
-	display: flex;/* met en ligne les block*/
+	display: flex;
 	flex-wrap: nowrap;
 	width: 100%;
 	justify-content: space-between;
@@ -26,15 +60,6 @@
 ul
 {
 	display: flex;
-}
-
-.logo
-{
-	padding-top: 10px;
-	max-height: 70px;
-	max-width: 180px;
-	width: 100%;
-
 }
 
 #menu li
@@ -68,15 +93,14 @@ a
 #icones
 {
 	margin-top: 40px;
-	/*margin-right: 40px;*/
+}*/
+/*-------------------------------------home--------------------------------------------*/
+a
+{
+	text-decoration: none;
 }
 
-#menu a:hover
-{
-	border-bottom: solid #F14928 1px;
-	padding-bottom: 5px;
-	color: #F14928;
-}
+
 
 #icones ul
 {
@@ -113,7 +137,7 @@ body
 	margin: 0px;
 }
 
-/*trois images et les hover*/
+/*--------------trois images et les hover--------------------*/
 
 
 #img_left #img_middle #img_right
@@ -280,21 +304,14 @@ a button:not(:hover)
     margin-right: auto;
     margin-top: 70px; 
 }
+/*--------------trois images et les hover--------------------*/
 
-.separation
-{
-	width: 1040px;
-	height:2px;
-	background-color: #C7c7C7;
-	display: flex;
-	margin: auto;
-	margin-top: 60px;
-}
 
 
 
 
 /*------------------------------footer------------------------------*/
+
 
 
 footer h5
@@ -306,8 +323,10 @@ footer h5
 
 footer
 {
-	color: #003A49/*bleu*/;
 	
+	margin-top: 30px;
+	color: #003A49/*bleu*/;
+	border-top: 2px solid  #C7c7C7;
 	font-family: 'Roboto-Medium',sans-serif;
 	display: flex;
 	justify-content: space-between;
@@ -370,14 +389,14 @@ footer img
 
 #corp_philo
 {
-	margin-left: 170px;
-	margin-top: 40px;
+	margin-left: 190px;
+	margin-top: 0px;
 }
 
 #philosophy_bandeau
 {
 	width: 100%;
-	height: 160px;
+	height: 140px;
 	background-image: url(http://lokahiboards.com/fr/wp-content/uploads/sites/10/2015/08/bg-header-philosophie.jpg);
 	background-position: top;
 	top: 0px;
@@ -385,12 +404,14 @@ footer img
 	padding: 0px;
 	color: #FFF;
 	display: flex;
+	margin-bottom: 35px;
 }
 
 #philosophy h1
 {
 margin: auto;
-padding-bottom: 65px;
+align-items: center;
+letter-spacing: 0.25em;
 
 }
 
@@ -412,6 +433,11 @@ padding-bottom: 65px;
 {
 	color: #F14928 !important;
 	font-size: 24px;
+	margin-top: 70px;
+	z-index: 0;
+	letter-spacing: 0.12em;
+	font-family: 'Roboto', 24pt;
+	font-style: italic;
 }
 
 .after
@@ -420,15 +446,38 @@ padding-bottom: 65px;
 	padding-right: 10px;
 }
 
-img [title="img-philosophie1"]
+img[title="img-philosophie1"]
 {
-	top: 100px;
-	left: 100px;
+	height: 295px;
+	width: 490px;
+	position: relative;
+	top: -160px;
+	left: 170px;
+	z-index: -1;
 }
 
 
-img [title="img-philosophie2"]
+img[title="img-philosophie2"]
 {
-	top: 200px;
-	left: 200px;
+	position: relative;	
+	top: 50px;
+	left: -500px;
+	z-index: -2;
+	height: 295px;
+	width: 485px;
+}
+
+#paragraphe_philo
+{
+	height:256px; 
+	width:480px;
+	position: relative;
+	top: -133px;
+	left: 728px;
+}
+
+.video-content-bg-video
+{
+align-items: center;
+margin: auto;
 }
