--- a/zut/style.css
+++ b/zut/style.css
@@ -6,11 +6,11 @@
 {
 	display: flex;/* met en ligne les block*/
 	flex-wrap: nowrap;
-	width:65em; /*1380px;*/
+	width: 1380px;
 	font-family: 'Roboto-Medium', sans-serif;
 	font-size: 18px;
 	letter-spacing: 120;
-	margin: auto;
+	/*margin: auto;*/
 	margin-left: auto!important;
 	margin-right: auto!important;
 }
@@ -20,7 +20,7 @@
 	display: flex;/* met en ligne les block*/
 	flex-wrap: nowrap;
 	width: 100%;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 ul
@@ -46,7 +46,7 @@ ul
 #menu
 {
 	margin-top: 40px;
-	padding-left: 50px;
+	padding-left: 20px;
 }
 
 #header a
@@ -68,7 +68,7 @@ a
 #icones
 {
 	margin-top: 40px;
-	/*margin-right: 40px;*/
+	margin-right: 60px;
 }
 
 #menu a:hover
@@ -108,10 +108,6 @@ a
 	padding-top: 65px;*/
 }
 
-body
-{
-	margin: 0px;
-}
 
 /*trois images et les hover*/
 
@@ -294,7 +290,7 @@ a button:not(:hover)
 
 
 
-/*------------------------------footer------------------------------*/
+/*footer*/
 
 
 footer h5
@@ -310,10 +306,10 @@ footer
 	
 	font-family: 'Roboto-Medium',sans-serif;
 	display: flex;
-	justify-content: space-between;
-	margin-left: 250px;
-	margin-right: 230px;
-	/*width: 1000px;*/
+	justify-content: space-around;
+	margin-left: 275px;
+	margin-right: 50px;
+	width: 1000px;
 }
 
 footer ul 
@@ -351,33 +347,24 @@ footer img
 	height: 17px;
 }
 
+
+
 #contact
 {
 	display: flex;
 }
 
-#pages
-{
-	display: flex;
-	justify-content: space-around;
-}
-/*#contact span 
+#contact span 
 {
 	padding-right: 10px;
-}*/
+}
 
 /*________________________________________pages philosophy____________________________________________*/
-
-#corp_philo
-{
-	margin-left: 190px;
-	margin-top: 0px;
-}
 
 #philosophy_bandeau
 {
 	width: 100%;
-	height: 140px;
+	height: 160px;
 	background-image: url(http://lokahiboards.com/fr/wp-content/uploads/sites/10/2015/08/bg-header-philosophie.jpg);
 	background-position: top;
 	top: 0px;
@@ -385,18 +372,14 @@ footer img
 	padding: 0px;
 	color: #FFF;
 	display: flex;
-	margin-bottom: 35px;
 }
 
 #philosophy h1
 {
 margin: auto;
-align-items: center;
-letter-spacing: 0.25em;
-
 }
 
-#ph
+#titre_philosophy
 {
 	border-bottom: solid #F14928 1px;
 	padding-bottom: 5px;
@@ -406,59 +389,16 @@ letter-spacing: 0.25em;
 #philosophy
 {
 	color: #003A48;
-	font-family: 'Roboto-Medium', sans-serif;
-	letter-spacing: 120;
+	font-family: "Roboto-Medium", sans-serif;
 }
 
 #passion
 {
 	color: #F14928 !important;
 	font-size: 24px;
-	margin-top: 70px;
-	z-index: 0;
-	letter-spacing: 0.12em;
-	font-family: 'Roboto', 24pt;
-	font-style: italic;
 }
 
 .after
 {
-	color:#F24725;
-	padding-right: 10px;
-}
-
-img[title="img-philosophie1"]
-{
-	height: 295px;
-	width: 490px;
-	position: relative;
-	top: -160px;
-	left: 170px;
-	z-index: -1;
-}
-
-
-img[title="img-philosophie2"]
-{
-	position: relative;	
-	top: 50px;
-	left: -500px;
-	z-index: -2;
-	height: 295px;
-	width: 485px;
-}
-
-#paragraphe_philo
-{
-	height:256px; 
-	width:480px;
-	position: relative;
-	top: -133px;
-	left: 728px;
-}
-
-.video-content-bg-video
-{
-align-items: center;
-margin: auto;
+	color:#F24725 ;
 }
